contrast fixed

--- a/src/app.css
+++ b/src/app.css
@@ -83,7 +83,7 @@ body {
 
 .theme--custom {
 	/* --tint-color: #729abe; */
-	--tint-color: #81a3c1;
+	--tint-color: #83a5c3;
 	--modal-bg: white;
 	--theme-tabs: rgba(255, 255, 255, 0.6);
 	/* --theme-surface: #d81717e5; */
